# opspilot-agent-kit-v1.1

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  Makefile  PROGRESS.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
caddy/: Caddyfile
db/init/: 01_schema.sql  02_ticket_events.sql  03_event_notify.sql
docs/: SPEC.md  TESTPLAN.md  infrastructure.md
docs/decisions/: ADR-001-llm-via-service.md  ADR-002-confidence-gate.md  ADR-003-pgvector.md  ADR-004-asyncpg-no-orm.md  ADR-005-single-telegram-entry-point.md  ADR-006-additive-schema-changes.md  ADR-007-rabbitmq-async-messaging.md
evals/: conftest.py  test_classify.py  test_grounding.py  tickets.jsonl
graphify-out/: .graphify_labels.json  GRAPH_REPORT.md  graph.html  graph.json  manifest.json
kb/seed/: api_guide_auth_rate_limits_en.md  billing_plans_pricing_en.md  faq_general_en.md  faq_zagalni_pytannya_ua.md  posibnyk_api_ua.md  refund_cancellation_policy_en.md  taryfy_ta_oplata_ua.md  troubleshooting_login_2fa_en.md  troubleshooting_sync_performance_en.md  usunennya_nespravnostey_vhid_ua.md
n8n/workflows/: wf1_intake_triage.json  wf2_draft_answer.json  wf3_hitl.json  wf4_sla_watchdog.json  wf5_daily_digest.json  wf6_delivery.json  wf7_event_publisher.json
openspec/changes/add-docstrings-pep8-audit/: design.md
openspec/changes/add-rabbitmq-messaging/: design.md
openspec/changes/add-structured-logging/: design.md  proposal.md  tasks.md
openspec/changes/split-llm-provider-package/: proposal.md
openspec/changes/try-gemma4-31b-cloud/: tasks.md
openspec/specs/async-messaging/: spec.md
openspec/specs/code-documentation-standards/: spec.md
openspec/specs/llm-provider-layer/: spec.md
openspec/specs/n8n-workflow-export/: spec.md
ops/: AGENT_WORKFLOW.md
prompts/: P0_foundation.md  P1_rag_service.md  P2_intake_autoanswer.md  P3_hitl_sla.md  P4_digest_notion.md  P5_evals_ci.md  P6_deploy_packaging.md  R1_reviewer.md  R2_session_resume.md  R3_wiki_lint.md
scripts/: backup.sh  check_intake_idempotency.sh  export_n8n_workflows.py  ingest.py  n8n_sync.py  rabbitmq_topology.py  set_n8n_webhook_url.py  test_backup_restore.sh
services/rag/: Dockerfile
wiki/: INDEX.md  gotchas.md  log.md  map.md
workflows-n8n/: wf1_intake_triage.json  wf2_draft_answer.json  wf3_hitl.json  wf4_sla_watchdog.json  wf5_daily_digest.json
(+67 files in other folders)
