[project]
name = "opspilot-rag"
version = "0.1.0"
description = "OpsPilot RAG/LLM FastAPI service"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "asyncpg>=0.30",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.7",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["services/rag/app"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["services/rag/tests"]
pythonpath = ["services/rag"]
markers = [
    "live: hits real LLM APIs, only runs when RUN_LIVE_TESTS=1",
    "evals: eval-harness tests (make evals)",
]
