[project]
name = "opspilot-rag"
version = "0.1.0"
description = "OpsPilot RAG/LLM FastAPI service"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "asyncpg>=0.30",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "anthropic>=0.40",
    "openai>=1.55",
    "httpx>=0.27",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["services/rag/app"]

[tool.ruff.lint]
# D100-D104: docstring-presence only (module/class/function/method/package) — deliberately not
# the full pydocstyle "D" family, which also flags style choices (blank-line placement, summary
# formatting, imperative mood) that this codebase's existing docstrings don't follow and aren't
# being retrofitted (openspec/changes/archive/*-add-docstrings-pep8-audit design.md).
select = ["E", "F", "I", "UP", "B", "D100", "D101", "D102", "D103", "D104"]

[tool.ruff.lint.per-file-ignores]
# Test function names are already the documentation; requiring docstrings here would just
# restate the name.
"services/rag/tests/**" = ["D100", "D101", "D102", "D103", "D104"]
"evals/test_*.py" = ["D100", "D101", "D102", "D103", "D104"]

[tool.pytest.ini_options]
testpaths = ["services/rag/tests"]
pythonpath = ["services/rag"]
asyncio_mode = "auto"
markers = [
    "live: hits real LLM APIs, only runs when RUN_LIVE_TESTS=1",
    "evals: eval-harness tests (make evals)",
]
